[gd_scene load_steps=7 format=3 uid="uid://dveaf7k64cejk"]

[ext_resource type="Script" uid="uid://d0mu4wubne3do" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="AudioStream" uid="uid://b67v2iabe53pn" path="res://assets/sounds/bullet_ricochet_1.wav" id="2_tamys"]
[ext_resource type="AudioStream" uid="uid://bl5gpm4cbv4mf" path="res://assets/sounds/bullet_ricochet_2.wav" id="3_26lx3"]
[ext_resource type="AudioStream" uid="uid://dojbln3ar351m" path="res://assets/sounds/bullet_ricochet_3.wav" id="4_1cfmv"]
[ext_resource type="AudioStream" uid="uid://cxy0ynp84pyr6" path="res://assets/sounds/bullet_ricochet_4.wav" id="5_k76ql"]
[ext_resource type="Texture2D" uid="uid://cwwrbo5yphdsg" path="res://assets/sprites/bullet sprite.png" id="6_w0gkw"]

[node name="Bullet" type="Node2D"]
script = ExtResource("1_y25gk")

[node name="DebugLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0)
width = 0.5
default_color = Color(1, 0.866667, 0.152941, 1)
texture_mode = 1

[node name="Path" type="Path2D" parent="."]

[node name="PathFollow" type="PathFollow2D" parent="Path"]

[node name="RichochetSounds" type="Node2D" parent="Path/PathFollow"]

[node name="Ricochet1" type="AudioStreamPlayer2D" parent="Path/PathFollow/RichochetSounds"]
stream = ExtResource("2_tamys")
attenuation = 6.06286

[node name="Ricochet2" type="AudioStreamPlayer2D" parent="Path/PathFollow/RichochetSounds"]
stream = ExtResource("3_26lx3")

[node name="Ricochet3" type="AudioStreamPlayer2D" parent="Path/PathFollow/RichochetSounds"]
stream = ExtResource("4_1cfmv")

[node name="Ricochet4" type="AudioStreamPlayer2D" parent="Path/PathFollow/RichochetSounds"]
stream = ExtResource("5_k76ql")

[node name="BulletSprite" type="Sprite2D" parent="Path/PathFollow"]
position = Vector2(1.78814e-07, 1.19209e-07)
texture = ExtResource("6_w0gkw")

[node name="KillSwitch" type="Timer" parent="."]
process_callback = 0

[connection signal="timeout" from="KillSwitch" to="." method="_on_timer_timeout"]
